# grid_map_ugv_planner

./: CMakeLists.txt  package.xml
config/: grid_map_landing_planner_filter_chain.yaml  grid_map_landing_planner_postprocess.yaml  remove_object.yaml  simple_demo_robot.yaml
data/: 2020-12-18-13-50-17.bag  2020-12-18-14-02-57.bag  grid_map.bag  grid_map_2.bag  grid_map_3.bag  grid_map_4.bag  grid_map_5.bag
include/grid_map_ugv_planner/: grid_map_ugv_planner.h
launch/: grid_map_ugv_planner.launch  load_gridmap.launch  realsense_demo.launch
src/: grid_map_ugv_planner.cpp  grid_map_ugv_planner_node.cpp
