<?xml version="1.0"?>
<package format="2">
    <name>grid_map_ugv_planner</name>
    <version>0.0.0</version>
    <description>The grid_map_ugv_planner package</description>
    <maintainer email="satoshi.ota928@gmail.com">Satoshi Ota</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_octomap</depend>
    <depend>grid_map_rviz_plugin</depend>
    <depend>grid_map_visualization</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>octomap_msgs</depend>
</package>
